deposits & drills, WIP

--- a/Resources/Prototypes/_NF/Entities/Structures/Specific/gaslock.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Specific/gaslock.yml
@@ -1,12 +1,10 @@
 # Giant mess of a YAML definition but largely based on GasPressurePump and AirlockShuttle
 - type: entity
   parent: BaseStructure
-  id: Gaslock
+  id: BaseGaslock
   suffix: Docking
   name: external gaslock
   description: Connects gas pipes on separate ships or stations together to allow gas transfer. Both sides must be docked and pumping in the same direction to accept flow.
-  placement:
-    mode: SnapgridCenter
   components:
   - type: Transform
     noRot: false
@@ -43,59 +41,21 @@
           radius: 0.2
           position: "0,-0.5"
         hard: false
-  - type: Sprite
-    sprite: Structures/Doors/Airlocks/Standard/shuttle.rsi
-    # granularLayersRendering: true
-    drawdepth: Doors
-    layers:
-    - state: closed
-    - state: closed_unlit
-      shader: unshaded
-      map: ["enum.GaslockVisualLayers.Docked"]
-    - sprite: Structures/Piping/Atmospherics/pipe.rsi
-      state: pipeStraight
-      map: [ "enum.PipeVisualLayers.Pipe" ]
-    - sprite: Structures/Piping/Atmospherics/pump.rsi
-      state: pumpPressure
-      map: [ "enabled" ]
-    - sprite: Structures/Piping/Atmospherics/pump.rsi
-      state: pumpPressureOnOut
-      map: [ "enabled-unlit" ]
-      shader: unshaded
-    - state: panel_open
-      map: ["enum.WiresVisualLayers.MaintenancePanel"]
   - type: Wires
     layoutId: Docking
   - type: WiresVisuals
   - type: WiresPanel
   - type: WiresPanelSecurity
-  - type: Airtight
   - type: PaintableAirlock
     group: External
     department: null
   # - type: Construction
   #   graph: AirlockShuttle
   #   node: airlock
-  - type: StaticPrice
-    price: 350
   - type: ApcPowerReceiver
     powerLoad: 500
   - type: ExtensionCableReceiver
   - type: Appearance
-  - type: GenericVisualizer
-    visuals:
-      enum.PumpVisuals.Enabled:
-        enabled-unlit:
-          True: { visible: true }
-          False: { visible: false }
-      enum.DockablePumpVisuals.Docked:
-        enum.GaslockVisualLayers.Docked:
-          True: { visible: true }
-          False: { visible: false }
-      enum.DockablePumpVisuals.PumpingOutward:
-        enum.GaslockVisualLayers.Docked:
-          True: { state: pumpPressureOnOut }
-          False: { state: pumpPressureOnIn }
   - type: PipeColorVisuals
   - type: GasPressurePump
     enabled: false
@@ -122,34 +82,148 @@
     range: 5
     sound:
       path: /Audio/Ambience/Objects/gas_pump.ogg
-  - type: BlockWeather
-  - type: PlacementReplacement
-    key: walls
-  - type: IconSmooth
-    key: walls
-    mode: NoSprite
-  - type: Occluder
   - type: InteractionOutline
   - type: StationAiWhitelist
-  - type: RadiationBlocker
-    resistance: 3
   - type: AtmosDevice
   - type: Tag
     tags:
       - Unstackable
       - Pipe
-      - ForceNoFixRotations
   - type: PipeAppearance
   - type: PipeRestrictOverlap
   - type: AtmosUnsafeUnanchor
   - type: AtmosPipeColor
 
 - type: entity
+  parent: BaseGaslock
+  id: Gaslock
+  suffix: Airtight
+  placement:
+    mode: SnapgridCenter
+  components:
+  - type: Airtight
+  - type: RadiationBlocker
+    resistance: 3
+  - type: Occluder
+  - type: Sprite
+    sprite: _NF/Structures/Piping/Atmospherics/gaslock.rsi
+    # granularLayersRendering: true
+    drawdepth: Doors
+    layers:
+    - state: closed
+    - state: closed_unlit
+      shader: unshaded
+      map: ["enum.GaslockVisualLayers.Docked"]
+    - state: pipeStraight
+      map: [ "enum.PipeVisualLayers.Pipe" ]
+    - state: pumpPressure
+      map: [ "enabled" ]
+    - state: pumpPressureOnOut
+      map: [ "enabled-unlit" ]
+      shader: unshaded
+    - state: panel_open
+      map: ["enum.WiresVisualLayers.MaintenancePanel"]
+  - type: GenericVisualizer
+    visuals:
+      enum.PumpVisuals.Enabled:
+        enabled-unlit:
+          True: { visible: true }
+          False: { visible: false }
+      enum.DockablePumpVisuals.Docked:
+        enum.GaslockVisualLayers.Docked:
+          True: { visible: true }
+          False: { visible: false }
+      enum.DockablePumpVisuals.PumpingOutward:
+        enum.GaslockVisualLayers.Docked:
+          True: { state: pumpPressureOnOut }
+          False: { state: pumpPressureOnIn }
+  - type: StaticPrice
+    price: 350
+  - type: Tag
+    tags:
+      - Unstackable
+      - Pipe
+      - ForceNoFixRotations
+  - type: BlockWeather
+  - type: PlacementReplacement
+    key: walls
+  - type: IconSmooth
+    key: walls
+    mode: NoSprite
+
+- type: entity
   parent: Gaslock
   id: GaslockReversed
-  suffix: Docking, Reversed
-  name: external gaslock
+  suffix: Airtight, Reversed
   description: Connects gas tanks on separate ships or stations together to allow gas transfer. Both stages must be set up to accept flow.
+  components:
+  - type: GasPressurePump
+    inlet: outlet
+    outlet: inlet
+  - type: DockablePump
+    pumpingInwards: true
+
+- type: entity
+  parent: BaseGaslock
+  id: GaslockFrame
+  suffix: Docking
+  name: gas staging port
+  description: Connects gas pipes on separate ships or stations together to allow gas transfer. Both sides must be docked and pumping in the same direction to accept flow.
+  placement:
+    mode: SnapgridCenter
+  components:
+  - type: Sprite
+    sprite: _NF/Structures/Piping/Atmospherics/gaslock.rsi
+    # granularLayersRendering: true
+    drawdepth: Doors
+    layers:
+    - sprite: Structures/Walls/solid.rsi
+      state: wall_girder
+    - state: frame_struts
+    - state: closed_unlit
+      shader: unshaded
+      map: ["enum.GaslockVisualLayers.Docked"]
+      state: pipeStraight
+      map: [ "enum.PipeVisualLayers.Pipe" ]
+      state: pumpPressure
+      map: [ "enabled" ]
+      state: pumpPressureOnOut
+      map: [ "enabled-unlit" ]
+      shader: unshaded
+    - state: panel_open
+      map: ["enum.WiresVisualLayers.MaintenancePanel"]
+  - type: GenericVisualizer
+    visuals:
+      enum.PumpVisuals.Enabled:
+        enabled-unlit:
+          True: { visible: true }
+          False: { visible: false }
+      enum.DockablePumpVisuals.Docked:
+        enum.GaslockVisualLayers.Docked:
+          True: { visible: true }
+          False: { visible: false }
+      enum.DockablePumpVisuals.PumpingOutward:
+        enum.GaslockVisualLayers.Docked:
+          True: { state: pumpPressureOnOut }
+          False: { state: pumpPressureOnIn }
+  - type: StaticPrice
+    price: 100
+  - type: Tag
+    tags:
+      - Unstackable
+      - Pipe
+      - ForceNoFixRotations
+  - type: BlockWeather
+  - type: PlacementReplacement
+    key: walls
+  - type: IconSmooth
+    key: walls
+    mode: NoSprite
+
+- type: entity
+  parent: GaslockFrame
+  id: GaslockFrameReversed
+  suffix: Docking, Reversed
   components:
   - type: GasPressurePump
     inlet: outlet
