More work on deposits and drills, still WIP

--- a/Resources/Prototypes/_NF/Entities/Objects/Specific/Atmospherics/deposits.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Specific/Atmospherics/deposits.yml
@@ -106,3 +106,15 @@
   components:
   - type: RandomGasDeposit
     deposit: AirLike
+
+# Debug item for detecting gas deposits
+- type: entity
+  parent: PinpointerSyndicateNuclear
+  id: PinpointerGasDeposit
+  name: gas deposit pinpointer
+  description: Pointing to the nearest gas deposit.
+  suffix: DEBUG
+  components:
+  - type: Pinpointer
+    component: RandomGasDeposit
+    targetName: RandomGasDeposit
