--- a/Resources/Maps/_NF/Shuttles/caladrius.yml
+++ b/Resources/Maps/_NF/Shuttles/caladrius.yml
@@ -2366,29 +2366,31 @@ entities:
       parent: 1
     - type: DeviceList
       devices:
-      - 637
-      - 1962
-      - 1228
-      - 1421
-      - 923
-      - 1836
+      - 2239
+      - 1988
+      - 1987
+      - 338
+      - 1986
+      - 1985
+      - 1984
+      - 1989
       - 1982
       - 1981
       - 1863
       - 1899
-      - 592
       - 226
-      - 726
+      - 592
       - 2359
       - 2360
-      - 905
+      - 726
       - 918
+      - 905
+      - 2178
+      - 2181
       - 2175
-      - 2174
-      - 328
-      - 486
-      - 529
-      - 2372
+      - 2047
+      - 2240
+      - 1993
   - uid: 53
     components:
     - type: Transform
@@ -2397,25 +2399,35 @@ entities:
       parent: 1
     - type: DeviceList
       devices:
-      - 1359
-      - 1330
-      - 992
-      - 1274
-      - 1783
-      - 1819
-      - 1351
-      - 1282
-      - 1106
-      - 667
+      - 2000
       - 1566
       - 245
-      - 2228
-      - 2227
-      - 1818
+      - 1274
+      - 992
       - 173
       - 584
       - 1345
       - 437
+      - 667
+      - 1106
+      - 1282
+      - 1351
+      - 1783
+      - 1819
+      - 1360
+      - 1329
+      - 1359
+      - 1330
+      - 109
+      - 1046
+      - 17
+      - 2228
+      - 2227
+      - 1818
+      - 2229
+      - 1250
+      - 1995
+      - 1993
   - uid: 138
     components:
     - type: Transform
@@ -2428,6 +2440,11 @@ entities:
       - 755
       - 1035
       - 1015
+      - 2298
+      - 1716
+      - 1987
+      - 1228
+      - 1421
   - uid: 643
     components:
     - type: Transform
@@ -2435,21 +2452,73 @@ entities:
       parent: 1
     - type: DeviceList
       devices:
+      - 1995
       - 768
       - 863
-      - 1995
   - uid: 1069
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: -10.5,1.5
       parent: 1
+    - type: DeviceList
+      devices:
+      - 1343
+      - 1341
+      - 1450
+      - 1185
+      - 2202
+      - 2201
+      - 917
+      - 1004
+      - 1439
+      - 1190
+      - 1356
+      - 77
+      - 506
+      - 1209
+      - 1498
+      - 1440
+      - 1221
+      - 1154
+      - 1429
+      - 2291
+      - 2292
+      - 1956
+      - 1976
+      - 1975
+      - 1716
+      - 2298
+      - 338
+      - 1984
   - uid: 1269
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: 3.5,-16.5
       parent: 1
+  - uid: 2174
+    components:
+    - type: Transform
+      pos: 8.5,-10.5
+      parent: 1
+    - type: DeviceList
+      devices:
+      - 328
+      - 486
+      - 529
+      - 2372
+      - 1962
+      - 637
+      - 1836
+      - 923
+      - 2239
+      - 2240
+      - 1988
+      - 2293
+      - 1990
+      - 926
+      - 684
 - proto: Airlock
   entities:
   - uid: 9
@@ -2495,7 +2564,7 @@ entities:
       parent: 1
 - proto: AirlockCargo
   entities:
-  - uid: 24
+  - uid: 2364
     components:
     - type: Transform
       rot: 3.141592653589793 rad
@@ -7746,12 +7815,20 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 1.5,-14.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 2174
+      - 3
   - uid: 2240
     components:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: 1.5,-15.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 2174
+      - 3
 - proto: FirelockGlass
   entities:
   - uid: 17
@@ -7760,30 +7837,46 @@ entities:
       rot: 1.5707963267948966 rad
       pos: -2.5,-24.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 53
   - uid: 109
     components:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: -6.5,-20.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 53
   - uid: 338
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: -0.5,-4.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 1069
+      - 3
   - uid: 684
     components:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: 10.5,-14.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 2174
   - uid: 926
     components:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: 10.5,-11.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 2174
   - uid: 1015
     components:
     - type: Transform
@@ -7808,96 +7901,149 @@ entities:
       rot: -1.5707963267948966 rad
       pos: -6.5,-23.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 53
   - uid: 1154
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: -8.5,3.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 1069
   - uid: 1250
     components:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: 5.5,-23.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 53
   - uid: 1429
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: -8.5,2.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 1069
   - uid: 1716
     components:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: 3.5,-2.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 1069
+      - 138
   - uid: 1956
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: 11.5,1.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 1069
   - uid: 1975
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: 4.5,4.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 1069
   - uid: 1976
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: 5.5,4.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 1069
   - uid: 1984
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: -8.5,-2.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 1069
+      - 3
   - uid: 1985
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: -7.5,-3.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 3
   - uid: 1986
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: -2.5,-3.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 3
   - uid: 1987
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: 1.5,-6.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 3
+      - 138
   - uid: 1988
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: 1.5,-12.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 2174
+      - 3
   - uid: 1989
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: -2.5,-12.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 3
   - uid: 1990
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: 6.5,-14.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 2174
   - uid: 1993
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: -0.5,-17.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 3
+      - 53
   - uid: 1995
     components:
     - type: Transform
@@ -7907,38 +8053,58 @@ entities:
     - type: DeviceNetwork
       deviceLists:
       - 643
+      - 53
   - uid: 2000
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: -8.5,-22.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 53
   - uid: 2229
     components:
     - type: Transform
       pos: 3.5,-18.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 53
   - uid: 2291
     components:
     - type: Transform
       pos: -4.5,7.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 1069
   - uid: 2292
     components:
     - type: Transform
       pos: 3.5,7.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 1069
   - uid: 2293
     components:
     - type: Transform
       pos: 6.5,-12.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 2174
   - uid: 2298
     components:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: 1.5,-3.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 1069
+      - 138
 - proto: Fireplace
   entities:
   - uid: 247
@@ -8255,14 +8421,6 @@ entities:
       parent: 1
     - type: AtmosPipeColor
       color: '#0055CCFF'
-  - uid: 2178
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: -12.5,-13.5
-      parent: 1
-    - type: AtmosPipeColor
-      color: '#990000FF'
   - uid: 2179
     components:
     - type: Transform
@@ -8276,14 +8434,6 @@ entities:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: -11.5,-14.5
-      parent: 1
-    - type: AtmosPipeColor
-      color: '#0055CCFF'
-  - uid: 2181
-    components:
-    - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: -11.5,-13.5
       parent: 1
     - type: AtmosPipeColor
       color: '#0055CCFF'
@@ -10537,6 +10687,14 @@ entities:
       color: '#0055CCFF'
 - proto: GasPipeTJunction
   entities:
+  - uid: 24
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: -12.5,-13.5
+      parent: 1
+    - type: AtmosPipeColor
+      color: '#990000FF'
   - uid: 83
     components:
     - type: Transform
@@ -10921,6 +11079,13 @@ entities:
       parent: 1
     - type: AtmosPipeColor
       color: '#0055CCFF'
+  - uid: 2045
+    components:
+    - type: Transform
+      pos: -11.5,-13.5
+      parent: 1
+    - type: AtmosPipeColor
+      color: '#0055CCFF'
   - uid: 2048
     components:
     - type: Transform
@@ -11076,6 +11241,9 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 13.5,-0.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 1069
     - type: AtmosPipeColor
       color: '#0055CCFF'
   - uid: 173
@@ -11107,7 +11275,7 @@ entities:
       parent: 1
     - type: DeviceNetwork
       deviceLists:
-      - 3
+      - 2174
     - type: AtmosPipeColor
       color: '#0055CCFF'
   - uid: 637
@@ -11118,7 +11286,7 @@ entities:
       parent: 1
     - type: DeviceNetwork
       deviceLists:
-      - 3
+      - 2174
     - type: AtmosPipeColor
       color: '#0055CCFF'
   - uid: 726
@@ -11159,6 +11327,9 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 6.5,5.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 1069
     - type: AtmosPipeColor
       color: '#0055CCFF'
   - uid: 992
@@ -11189,6 +11360,9 @@ entities:
       rot: 1.5707963267948966 rad
       pos: -13.5,3.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 1069
     - type: AtmosPipeColor
       color: '#0055CCFF'
   - uid: 1345
@@ -11229,6 +11403,9 @@ entities:
       rot: 3.141592653589793 rad
       pos: -9.5,-25.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 53
     - type: AtmosPipeColor
       color: '#0055CCFF'
   - uid: 1421
@@ -11239,7 +11416,7 @@ entities:
       parent: 1
     - type: DeviceNetwork
       deviceLists:
-      - 3
+      - 138
     - type: AtmosPipeColor
       color: '#0055CCFF'
   - uid: 1439
@@ -11247,6 +11424,9 @@ entities:
     - type: Transform
       pos: 11.5,4.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 1069
     - type: AtmosPipeColor
       color: '#0055CCFF'
   - uid: 1440
@@ -11255,6 +11435,9 @@ entities:
       rot: 3.141592653589793 rad
       pos: -4.5,-1.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 1069
     - type: AtmosPipeColor
       color: '#0055CCFF'
   - uid: 1450
@@ -11263,6 +11446,9 @@ entities:
       rot: 1.5707963267948966 rad
       pos: -7.5,5.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 1069
     - type: AtmosPipeColor
       color: '#0055CCFF'
   - uid: 1451
@@ -11285,6 +11471,9 @@ entities:
       rot: 1.5707963267948966 rad
       pos: 3.5,-1.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 1069
     - type: AtmosPipeColor
       color: '#0055CCFF'
   - uid: 1564
@@ -11326,7 +11515,7 @@ entities:
       parent: 1
     - type: DeviceNetwork
       deviceLists:
-      - 3
+      - 2174
     - type: AtmosPipeColor
       color: '#0055CCFF'
   - uid: 1863
@@ -11361,12 +11550,26 @@ entities:
       - 3
     - type: AtmosPipeColor
       color: '#0055CCFF'
+  - uid: 2181
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: -12.5,-13.5
+      parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 3
+    - type: AtmosPipeColor
+      color: '#0055CCFF'
   - uid: 2202
     components:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: 2.5,5.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 1069
     - type: AtmosPipeColor
       color: '#0055CCFF'
   - uid: 2372
@@ -11377,7 +11580,7 @@ entities:
       parent: 1
     - type: DeviceNetwork
       deviceLists:
-      - 3
+      - 2174
     - type: AtmosPipeColor
       color: '#0055CCFF'
 - proto: GasVentScrubber
@@ -11412,7 +11615,7 @@ entities:
       parent: 1
     - type: DeviceNetwork
       deviceLists:
-      - 3
+      - 2174
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 506
@@ -11421,6 +11624,9 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 6.5,2.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 1069
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 529
@@ -11431,7 +11637,7 @@ entities:
       parent: 1
     - type: DeviceNetwork
       deviceLists:
-      - 3
+      - 2174
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 584
@@ -11505,7 +11711,7 @@ entities:
       parent: 1
     - type: DeviceNetwork
       deviceLists:
-      - 3
+      - 2174
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 1004
@@ -11514,6 +11720,9 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 6.5,9.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 1069
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 1185
@@ -11522,6 +11731,9 @@ entities:
       rot: 1.5707963267948966 rad
       pos: -7.5,9.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 1069
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 1186
@@ -11543,6 +11755,9 @@ entities:
     - type: Transform
       pos: 10.5,4.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 1069
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 1209
@@ -11551,6 +11766,9 @@ entities:
       rot: 3.141592653589793 rad
       pos: 5.5,-1.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 1069
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 1221
@@ -11559,6 +11777,9 @@ entities:
       rot: 3.141592653589793 rad
       pos: -6.5,-1.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 1069
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 1228
@@ -11569,7 +11790,7 @@ entities:
       parent: 1
     - type: DeviceNetwork
       deviceLists:
-      - 3
+      - 138
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 1274
@@ -11600,6 +11821,9 @@ entities:
       rot: 3.141592653589793 rad
       pos: -10.5,-25.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 53
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 1330
@@ -11618,6 +11842,9 @@ entities:
       rot: 1.5707963267948966 rad
       pos: -13.5,2.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 1069
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 1356
@@ -11626,6 +11853,9 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 13.5,0.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 1069
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 1783
@@ -11657,7 +11887,7 @@ entities:
       parent: 1
     - type: DeviceNetwork
       deviceLists:
-      - 3
+      - 2174
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 1981
@@ -11671,11 +11901,22 @@ entities:
       - 3
     - type: AtmosPipeColor
       color: '#990000FF'
-  - uid: 2174
+  - uid: 2047
     components:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: -14.5,-13.5
+      parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 3
+    - type: AtmosPipeColor
+      color: '#990000FF'
+  - uid: 2178
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: -12.5,-14.5
       parent: 1
     - type: DeviceNetwork
       deviceLists:
@@ -11688,6 +11929,9 @@ entities:
       rot: 1.5707963267948966 rad
       pos: 2.5,9.5
       parent: 1
+    - type: DeviceNetwork
+      deviceLists:
+      - 1069
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 2359
