Gas deposits, pipe fixes for the drill

--- a/Resources/Prototypes/_NF/Entities/Objects/Specific/Atmospherics/deposits.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Specific/Atmospherics/deposits.yml
@@ -2,7 +2,7 @@
 - type: entity
   id: BaseGasDeposit
   name: gas deposit
-  description: Solidified deposits of an element, normally a gas at room temperature, can be drilled, heated and piped out."
+  description: Solidified deposits of an element, normally a gas at room temperature, can be drilled, heated and piped out.
   abstract: true
   placement:
     mode: SnapgridCenter
