--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/Computers/computers_shipyard.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/Computers/computers_shipyard.yml
@@ -133,6 +133,7 @@
     secretShipyardChannel: Nfsd
     salesTax: 0.3
     canTransferDeed: false
+  - type: SyndicateFOB
 
 - type: entity
   id: ComputerShipyardBlackMarket
