--- a/Resources/Prototypes/_NF/PointsOfInterest/edison.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/edison.yml
@@ -8,28 +8,34 @@
 
 # Notes:
 # 
-# - type: pointOfInterest
-  # id: Edison
-  # name: 'Edison Power Plant'
-  # rangeMin: 3650
-  # rangeMax: 6400
-  # IFFColor: "#3737C8" #blue the color of NT
-  # spawnGroup: Required
-  # gridPath: /Maps/_NF/POI/edison.yml 
+- type: pointOfInterest
+  id: Edison
+  name: 'Edison Power Plant'
+  minimumDistance: 3650
+  maximumDistance: 6400
+  spawnGroup: Required
+  gridPath: /Maps/_NF/POI/edison.yml 
+  addComponents:
+  - type: IFF
+    color: "#3737C8"
+    readOnly: true
+  - type: Shuttle
+    angularDamping: 999999
+    linearDamping: 999999
 
-# - type: gameMap
-  # id: Edison
-  # mapName: 'Edison Power Plant'
-  # mapPath: /Maps/_NF/POI/edison.yml
-  # minPlayers: 0
-  # stations:
-    # Edison:
-      # stationProto: RecordsFrontierOutpost
-      # components:
-        # - type: StationNameSetup
-          # mapNameTemplate: 'Edison Power Plant'
-        # - type: StationJobs
-          # availableJobs:
-            # Pilot: [ 0, 0 ]
-            # Mercenary: [ 0, 0 ]
-            # Contractor: [ 0, 0 ]
+- type: gameMap
+  id: Edison
+  mapName: 'Edison Power Plant'
+  mapPath: /Maps/_NF/POI/edison.yml
+  minPlayers: 0
+  stations:
+    Edison:
+      stationProto: RecordsFrontierOutpost
+      components:
+        - type: StationNameSetup
+          mapNameTemplate: 'Edison Power Plant'
+        - type: StationJobs
+          availableJobs:
+            Pilot: [ 0, 0 ]
+            Mercenary: [ 0, 0 ]
+            Contractor: [ 0, 0 ]
