--- a/Resources/Prototypes/_NF/PointsOfInterest/lodge.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/lodge.yml
@@ -11,12 +11,18 @@
 - type: pointOfInterest
   id: Lodge
   name: 'Expeditionary Lodge'
-  rangeMin: 1650
-  rangeMax: 3400
-  IFFColor: "#3737C8" #blue the color of NT
+  minimumDistance: 1650
+  maximumDistance: 3400
   spawnGroup: Required
   gridPath: /Maps/_NF/POI/lodge.yml
-  busStop: true
+  addComponents:
+  - type: IFF
+    color: "#3737C8"
+    readOnly: true
+  - type: Shuttle
+    angularDamping: 999999
+    linearDamping: 999999
+  - type: StationTransit
 
 - type: gameMap
   id: Lodge
