--- a/Resources/Prototypes/_NF/PointsOfInterest/lpbravo.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/lpbravo.yml
@@ -11,14 +11,19 @@
 - type: pointOfInterest
   id: LPBravo
   name: 'Listening Point Bravo'
-  rangeMin: 4000
-  rangeMax: 6000
-  IFFColor: "#C83737" #red the color of ebil
-  IFFFlags: [HideLabel, Hide] # Invisible
-  allowIFFChanges: true
-  hideWarp: true
+  minimumDistance: 4000
+  maximumDistance: 6000
   spawnGroup: SyndicateFOB
   gridPath: /Maps/_NF/POI/lpbravo.yml
+  hideWarp: true
+  addComponents:
+  - type: IFF
+    color: "#C83737"
+    flags: [HideLabel, Hide]
+  - type: Shuttle
+    angularDamping: 999999
+    linearDamping: 999999
+  - type: SyndicateFOB # For pinpointer
 
 - type: gameMap
   id: LPBravo
