--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -1396,6 +1396,7 @@
         - MaterialBananium1
         - MaterialDiamond
         - BluespaceCrystal #Nyano - Summary: Bluespace Crystals can be created here.
+        - SmeltScrap # Frontier
 
 - type: entity
   parent: OreProcessor
@@ -1426,6 +1427,7 @@
       - MaterialBananium1
       - MaterialDiamond
       - BluespaceCrystal #Nyano - Summary: Bluespace Crystals can be created here.
+      - SmeltScrap # Frontier
 
 - type: entity
   parent: BaseLathe
