--- a/Resources/Prototypes/_NF/Entities/Structures/Walls/asteroid.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Walls/asteroid.yml
@@ -252,6 +252,9 @@
   name: scrap pile
   description: A pile of scrap.
   components:
+  - type: OreVein
+    oreChance: 1.0
+    currentOre: ScrapOre
   - type: Icon
     sprite: _NF/Structures/Walls/rock.rsi
     state: scraprock01
