--- a/Resources/Prototypes/_NF/Entities/Structures/Walls/asteroid.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Walls/asteroid.yml
@@ -251,10 +251,11 @@
   parent: WallRockAndesite
   name: scrap pile
   description: A pile of scrap.
+  suffix: Scrap
   components:
   - type: OreVein
     oreChance: 1.0
-    currentOre: ScrapOre
+    currentOre: NFOreScrap
   - type: Icon
     sprite: _NF/Structures/Walls/rock.rsi
     state: scraprock01
@@ -271,6 +272,8 @@
       state: scraprock_north
     - map: [ "enum.EdgeLayer.West" ]
       state: scraprock_west
+    - state: rock_scrap
+      map: [ "enum.MiningScannerVisualLayers.Overlay" ]
   - type: RandomSprite
     available:
       - scraprock_variant:
