--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/pets.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/pets.yml
@@ -178,7 +178,8 @@
       - DinosaursNF
   - type: NFSalvageMobRestrictions
     despawnIfOffLinkedGrid: false
-    cleanCompsOnMobDeath: false
+    addComponentsOnDeath: []
+    removeComponentsOnDeath: []
 
 - type: entity
   name: Mistake
