--- a/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/dungeon_items_general.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/dungeon_items_general.yml
@@ -649,6 +649,7 @@
     - PlasmaCanisterBroken
     - TritiumCanisterBroken
     - StorageCanisterBroken
+    - StorageCanisterBrokenAlt
     - WaterVaporCanisterBroken
     - OxygenCanisterBroken
     chance: 1
