--- a/Resources/Prototypes/_NF/Entities/Structures/Storage/Canisters/gas_canisters.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Storage/Canisters/gas_canisters.yml
@@ -80,7 +80,7 @@
 
 - type: entity
   parent: GasCanisterBrokenBase
-  id: StorageCanisterBroken
+  id: StorageCanisterBrokenAlt
   categories: [ HideSpawnMenu ]
   components:
   - type: Sprite
