--- a/Resources/Prototypes/EstacaoPirata/Entities/Objects/Misc/cards.yml
+++ b/Resources/Prototypes/EstacaoPirata/Entities/Objects/Misc/cards.yml
@@ -39,6 +39,7 @@
   abstract: true
   components:
   - type: Item
+    sprite: EstacaoPirata/Objects/Misc/cards.rsi # Frontier
     size: Small
   - type: CardStack
   - type: ContainerContainer # Frontier
