--- a/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/meals.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/meals.yml
@@ -78,6 +78,9 @@
   components:
   - type: FriedTrait
     crispinessLevelSet: Spectral
+  - type: FlavorProfile
+    flavors:
+      - spooky
 
 - type: entity
   name: dragon omelette
