--- a/Resources/Prototypes/Entities/Structures/cargo_telepad.yml
+++ b/Resources/Prototypes/Entities/Structures/cargo_telepad.yml
@@ -47,5 +47,5 @@
     board: CargoTelepadMachineCircuitboard
   - type: Appearance
   - type: CollideOnAnchor
-  - type: NameIdentifier
-    group: CargoTelepads
+#  - type: NameIdentifier # Frontier
+#    group: CargoTelepads # Frontier
