--- a/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Projectiles/crossbow_bolts.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Projectiles/crossbow_bolts.yml
@@ -565,6 +565,9 @@
     damage:
       types:
         Blunt: 30 # Should prevent re-using
+  - type: ContainerContainer
+    containers:
+      cluster-payload: !type:Container
 
 # Blood cult
 - type: entity
