Up canister to 1000

--- a/Resources/Prototypes/Entities/Structures/Storage/Canisters/gas_canisters.yml
+++ b/Resources/Prototypes/Entities/Structures/Storage/Canisters/gas_canisters.yml
@@ -99,9 +99,9 @@
           components:
             - GasTank
     - type: StaticPrice
-      price: 100 # Frontier: 200<100
+      price: 1000 # Frontier: 200<1000
     - type: AccessReader
-#      access: [["Atmospherics"], ["Engineering"], ["Research"], ["Captain"]]
+#      access: [["Atmospherics"], ["Engineering"], ["Research"], ["Captain"]] # Frontier
     - type: Lock
       locked: true
 
