--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_base.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_base.yml
@@ -107,7 +107,8 @@
     - type: Access
     - type: Timer
     - type: TimedSpawner
-#    - type: Advertise # TODO: The errors, make them stop!
+    - type: Advertise
+      pack: FuelVendAds # placeholder, required field, unused
 
 - type: entity
   abstract: true
