--- a/Resources/_NF/migration.yml
+++ b/Resources/_NF/migration.yml
@@ -99,3 +99,6 @@ XenoAISpawnerEasy: SpawnMobXenoT1
 XenoAISpawnerMedium: SpawnMobXenoT2
 XenoAISpawnerHard: SpawnMobXenoT3
 XenoAISpawnerQueen: SpawnMobXenoQueenDungeon
+
+# 2024-11-16 Canister
+SpawnDungeonLootCanister: SalvageCanisterSpawner
