--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/Salvage/spawners.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/Salvage/spawners.yml
@@ -388,8 +388,8 @@
   - type: Sprite
     layers:
     - state: pink
-    - sprite: Structures/Storage/canister.rsi
-      state: blue
+    - sprite: _NF/Structures/Storage/canister.rsi # Frontier
+      state: oxygen # Frontier blue<oxygen
   - type: EntityTableSpawner
     table: !type:GroupSelector
       prob: 0.9
