--- a/Resources/Prototypes/_NF/Shipyard/Sr/broom.yml
+++ b/Resources/Prototypes/_NF/Shipyard/Sr/broom.yml
@@ -12,7 +12,7 @@
   id: Broom
   name: LVHI Broom
   description: A cramped yet reliable shuttle for providing janitorial services.
-  price: 11000 # ~9650$ on mapinit + ~1450$ from 15% markup
+  price: 12750 # ~12080$ on mapinit + 5% markup
   category: Micro
   group: Sr
   access: Janitor
