--- a/Resources/Prototypes/_NF/Shipyard/kilderkin.yml
+++ b/Resources/Prototypes/_NF/Shipyard/kilderkin.yml
@@ -12,7 +12,7 @@
   id: Kilderkin
   name: LVHI Kilderkin
   description: "Spaceworthy bar/microbrewery with everything one needs to facilitate poor life choices: lots of booze, smokes, and lack of food. Manufactured by Langstad-Voigt Heavy Industries."
-  price: 47000 # ~39600$ on mapinit + ~5950$ from 15% markup
+  price: 48750 # ~46208$ on mapinit + 5% markup
   category: Medium
   group: Shipyard
   shuttlePath: /Maps/_NF/Shuttles/kilderkin.yml
