--- a/Resources/Prototypes/_NF/Shipyard/searchlight.yml
+++ b/Resources/Prototypes/_NF/Shipyard/searchlight.yml
@@ -12,7 +12,7 @@
   id: Searchlight
   name: LVHI Searchlight
   description: A small vessel outfitted for the search and recovery of wounded NT personnel. Manufactured by Langstad-Voigt Heavy Industries.
-  price: 25700 # ~22400$ on mapinit + ~3360$ from 15% markup
+  price: 30000 # ~25988$ on mapinit + 15% markup
   category: Small
   group: Shipyard
   shuttlePath: /Maps/_NF/Shuttles/searchlight.yml
