--- a/Resources/Prototypes/_NF/Entities/Clothing/base_recyclable_clothing.yml
+++ b/Resources/Prototypes/_NF/Entities/Clothing/base_recyclable_clothing.yml
@@ -19,13 +19,10 @@
   - type: PhysicalComposition
     materialComposition:
       Steel: 100
-      Glass: 100
   - type: Butcherable # Yields ~30% more if it rounds to whole up
     butcheringType: Knife # Would rather use screwdriver, but looks like butcheringType has hardcoded list of types
     spawned:
     - id: SheetSteel1
-      amount: 1
-    - id: SheetGlass1
       amount: 1
 
 - type: entity # Jumpsuits, backpacks, belts etc.
@@ -34,12 +31,12 @@
   components:
   - type: PhysicalComposition
     materialComposition:
-      Cloth: 200
-  - type: Butcherable # Yields ~30% more if it rounds to whole up
+      Cloth: 150
+  - type: Butcherable # Yields more if it rounds to whole up
     butcheringType: Knife
     spawned:
     - id: MaterialCloth1
-      amount: 3
+      amount: 2
 
 - type: entity # Coats and jackets
   id: RecyclableItemClothDurable
