--- a/Resources/Prototypes/Entities/Objects/Specific/Research/disk.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Research/disk.yml
@@ -20,6 +20,8 @@
   components:
   - type: ResearchDisk
     points: 5000
+  - type: StaticPrice # Frontier
+    price: 1000 # Frontier - To be fair, its worth half a tech disk, but we still require tech to print it so its lower.
 
 - type: entity
   parent: ResearchDisk
@@ -29,6 +31,8 @@
   components:
   - type: ResearchDisk
     points: 10000
+  - type: StaticPrice # Frontier
+    price: 2000 # Frontier - To be fair, its worth a tech disk, but we still require tech to print it so its lower.
 
 - type: entity
   parent: ResearchDisk
@@ -59,7 +63,7 @@
   - type: TechnologyDisk
     tierWeightPrototype: TechDiskTierWeights # Frontier
   - type: StaticPrice
-    price: 100
+    price: 0 # Frontier 100<0
   - type: StealTarget
     stealGroup: TechnologyDisk
 
