--- a/Resources/Prototypes/XenoArch/Effects/normal_effects.yml
+++ b/Resources/Prototypes/XenoArch/Effects/normal_effects.yml
@@ -127,6 +127,7 @@
       # amount: 3
       # maxAmount: 6
   - type: ChemicalPuddleArtifact
+    maximumVolume: 200 # Frontier
     chemicalSolution:
       maxVol: 100
       canReact: false
@@ -156,8 +157,9 @@
   effectHint: artifact-effect-hint-biochemical
   components:
   - type: ChemicalPuddleArtifact
+    maximumVolume: 600 # Frontier
     chemicalSolution:
-      maxVol: 500
+      maxVol: 300 # Frontier: 500<300
       canReact: false
     possibleChemicals:
     - Aluminium
@@ -489,8 +491,9 @@
   effectHint: artifact-effect-hint-biochemical
   components:
   - type: ChemicalPuddleArtifact
+    maximumVolume: 600 # Frontier
     chemicalSolution:
-      maxVol: 500
+      maxVol: 300 # Frontier
       canReact: false
     possibleChemicals:
     - Dermaline
