--- a/Resources/Prototypes/_NF/XenoArch/Effects/utility_effects.yml
+++ b/Resources/Prototypes/_NF/XenoArch/Effects/utility_effects.yml
@@ -3,7 +3,7 @@
 - type: artifactEffect
   id: EffectReclaimer
   targetDepth: 3
-  effectHint: artifact-effect-hint-multitool
+  effectHint: artifact-effect-hint-reclaimer
   blacklist:
     components:
     - Item
@@ -51,23 +51,23 @@
 - type: artifactEffect
   id: EffectInteractionPopup
   targetDepth: 2
-  effectHint: artifact-trigger-hint-examine
+  effectHint: artifact-trigger-hint-petting
   blacklist:
     components:
     - Item
   permanentComponents:
   - type: InteractionPopup
-    successChance: 0.9
-    interactSuccessString: petting-success-bird
-    interactFailureString: petting-failure-generic
+    successChance: 0.5
+    interactSuccessString: petting-success-artifact
+    interactFailureString: petting-failure-artifact
     interactSuccessSpawn: EffectHearts
     interactSuccessSound:
-      path: /Audio/Animals/duck_quack_happy.ogg
+      collection: RadiationPulse
 
 - type: artifactEffect
   id: EffectAdvMop
   targetDepth: 3
-  effectHint: artifact-trigger-hint-tool
+  effectHint: artifact-trigger-hint-mop
   whitelist:
     components:
     - Item
