--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
@@ -550,7 +550,7 @@
 
 - type: entity
   id: NfsdTechFab
-  parent: [ SecurityTechFab, BlueprintReceiverBase ]
+  parent: [ BlueprintReceiverBase, SecurityTechFab ]
   name: nfsd techfab
   description: Prints equipment for use by nfsd.
   components:
