--- a/Resources/Prototypes/_NF/Entities/Clothing/base_recyclable_clothing.yml
+++ b/Resources/Prototypes/_NF/Entities/Clothing/base_recyclable_clothing.yml
@@ -1,11 +1,11 @@
 # Clothes
-- type: entity # Gloves, boots
+- type: entity # Gloves, boots, hats
   id: RecyclableItemClothSmall
   abstract: true
   components:
   - type: PhysicalComposition
     materialComposition:
-      Cloth: 100
+      Cloth: 50
   - type: Butcherable # Yields ~30% more if it rounds to whole up
     butcheringType: Knife
     spawned:
@@ -60,18 +60,18 @@
   components:
   - type: PhysicalComposition
     materialComposition:
-      Durathread: 500
+      Durathread: 300
       Plasteel: 200
-      Steel: 200
-  - type: Butcherable # Yields ~30% more if it rounds to whole up
+      Steel: 100
+  - type: Butcherable
     butcheringType: Knife
     spawned:
     - id: MaterialDurathread1
-      amount: 7
+      amount: 3
     - id: SheetSteel1
-      amount: 3
+      amount: 2
     - id: SheetPlasteel1
-      amount: 3
+      amount: 1
 
 - type: entity
   id: RecyclableItemClothHardsuit
