--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/Containers/bowl.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/Containers/bowl.yml
@@ -83,7 +83,7 @@
       Glass: 50
   - type: SpaceGarbage
   - type: StaticPrice
-    price: 1 # Frontier 0<1
+    price: 4 # Frontier 0<4 4 needed for arbitrage
 
 - type: entity
   name: bowl
