--- a/Resources/Prototypes/_NF/Shipyard/spirit.yml
+++ b/Resources/Prototypes/_NF/Shipyard/spirit.yml
@@ -11,7 +11,7 @@
 - type: vessel
   id: Spirit
   name: FSB Spirit
-  description: A tiny medical search and rescue shuttle, as nimble as it is cramped. Running costs guarenteed* to be 5% lower than competing models!
+  description: A tiny medical search and rescue shuttle, as nimble as it is cramped. Running costs guaranteed* to be 5% lower than competing models!
   price: 18000
   category: Small
   group: Shipyard
